website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/guides/docs/sidebar/items.mdx
---
toc_max_heading_level: 4
slug: /sidebar/items
---

# 侧边栏项目

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import BrowserWindow from '@site/src/components/BrowserWindow';

我们在前一节的示例中介绍了三种项目类型：`doc`、`category` 和 `link`，它们的用法相当直观。我们将正式介绍它们的API。还有第四种类型：`autogenerated`，我们稍后会详细解释。

- **[文档](#sidebar-item-doc)**：链接到文档页面，并将其与侧边栏关联
- **[链接](#sidebar-item-link)**：链接到任何内部或外部页面
- **[分类](#sidebar-item-category)**：创建一个下拉菜单的侧边栏项目
- **[自动生成](autogenerated.mdx)**：自动生成侧边栏片段
- **[HTML](#sidebar-item-html)**：在项目位置渲染纯HTML
- **[\*引用](multiple-sidebars.mdx#sidebar-item-ref)**：链接到文档页面，但不参与导航生成

## 文档：链接到文档 {#sidebar-item-doc}

使用 `doc` 类型链接到文档页面并将该文档分配给侧边栏：

```ts
type SidebarItemDoc =
  // Normal syntax
  | {
      type: 'doc';
      id: string;
      label: string; // Sidebar label text
      className?: string; // Class name for sidebar label
      customProps?: Record<string, unknown>; // Custom props
    }

  // Shorthand syntax
  | string; // docId shortcut
```

示例：

```js title="sidebars.js"
export default {
  mySidebar: [
    // Normal syntax:
    // highlight-start
    {
      type: 'doc',
      id: 'doc1', // document ID
      label: 'Getting started', // sidebar label
    },
    // highlight-end

    // Shorthand syntax:
    // highlight-start
    'doc2', // document ID
    // highlight-end
  ],
};
```

如果使用文档简写或[自动生成](autogenerated.mdx)的侧边栏，您将无法通过项目定义自定义侧边栏标签。但是，您可以在该文档中使用 `sidebar_label` Markdown front matter，其优先级高于侧边栏项目中的 `label` 键。同样，您可以使用 `sidebar_custom_props` 为文档页面声明自定义元数据。

:::note

`doc` 项目设置了[隐式侧边栏关联](./multiple-sidebars.mdx#sidebar-association)。不要将同一文档分配给多个侧边栏：改为使用 `ref` 类型。

:::

:::tip

侧边栏自定义属性是一种将任意文档元数据传播到客户端的有用方式，因此在使用任何获取文档对象的文档相关钩子时，您可以获取额外的信息。

:::

## 链接：链接到任何页面 {#sidebar-item-link}

使用 `link` 类型链接到任何非文档页面（内部或外部）。

```ts
type SidebarItemLink = {
  type: 'link';
  label: string;
  href: string;
  className?: string;
  description?: string;
};
```

示例：

```js title="sidebars.js"
export default {
  myLinksSidebar: [
    // highlight-start
    // External link
    {
      type: 'link',
      label: 'Facebook', // The link label
      href: 'https://facebook.com', // The external URL
    },
    // highlight-end

    // highlight-start
    // Internal link
    {
      type: 'link',
      label: 'Home', // The link label
      href: '/', // The internal path
    },
    // highlight-end
  ],
};
```

## HTML：渲染自定义标记 {#sidebar-item-html}

使用 `html` 类型在项目的 `<li>` 标签内渲染自定义HTML。

这对于插入自定义项目（如分隔符、节标题、广告和图像）非常有用。

```ts
type SidebarItemHtml = {
  type: 'html';
  value: string;
  defaultStyle?: boolean; // Use default menu item styles
  className?: string;
};
```

示例：

```js title="sidebars.js"
export default {
  myHtmlSidebar: [
    // highlight-start
    {
      type: 'html',
      value: '<img src="sponsor.png" alt="Sponsor" />', // The HTML to be rendered
      defaultStyle: true, // Use the default menu item styling
    },
    // highlight-end
  ],
};
```

:::tip

菜单项已经包装在 `<li>` 标签中，因此如果您的自定义项目很简单（例如标题），只需提供一个字符串作为值，并使用 `className` 属性来设置样式：

```js title="sidebars.js"
export default {
  myHtmlSidebar: [
    {
      type: 'html',
      value: '核心概念',
      className: 'sidebar-title',
    },
  ],
};
```

:::

## 分类：创建层次结构 {#sidebar-item-category}

使用 `category` 类型创建侧边栏项目的层次结构。

```ts
type SidebarItemCategory = {
  type: 'category';
  label: string; // Sidebar label text.
  items: SidebarItem[]; // Array of sidebar items.
  className?: string;
  description?: string;

  // Category options:
  collapsible: boolean; // Set the category to be collapsible
  collapsed: boolean; // Set the category to be initially collapsed or open by default
  link: SidebarItemCategoryLinkDoc | SidebarItemCategoryLinkGeneratedIndex;
};
```

示例：

```js title="sidebars.js"
export default {
  docs: [
    {
      type: 'category',
      label: 'Guides',
      collapsible: true,
      collapsed: false,
      items: [
        'creating-pages',
        {
          type: 'category',
          label: 'Docs',
          items: ['introduction', 'sidebar', 'markdown-features', 'versioning'],
        },
      ],
    },
  ],
};
```

:::tip

当不需要自定义时，使用[**简写语法**](#category-shorthand)：

```js title="sidebars.js"
export default {
  docs: {
    指南: [
      'creating-pages',
      {
        文档: ['introduction', 'sidebar', 'markdown-features', 'versioning'],
      },
    ],
  },
};
```

:::

### 分类链接 {#category-link}

通过分类链接，点击分类可导航至其他页面。

:::tip

使用分类链接来引入一组相关文档。

自动生成的分类可通过 [`_category_.yml`](./autogenerated.mdx#category-item-metadata) 文件声明链接目标。

:::

#### 自动生成索引页 {#generated-index-page}

可自动生成展示该分类下所有直接子项的索引页。通过 `slug` 参数可自定义生成页面的路由路径，默认值为 `/category/[分类名称]`。

```js title="sidebars.js"
export default {
  docs: [
    {
      type: 'category',
      label: 'Guides',
      // highlight-start
      link: {
        type: 'generated-index',
        title: 'Docusaurus Guides',
        description: 'Learn about the most important Docusaurus concepts!',
        slug: '/category/docusaurus-guides',
        keywords: ['guides'],
        image: '/img/docusaurus.png',
      },
      // highlight-end
      items: ['pages', 'docs', 'blog', 'search'],
    },
  ],
};
```

实际效果可参考 [Docusaurus 指南页](/docs/category/guides)。

:::tip

使用 `generated-index` 链接作为快速创建介绍文档的便捷方式。

:::

#### 文档链接 {#category-doc-link}

分类可关联至现有文档。

```js title="sidebars.js"
export default {
  docs: [
    {
      type: 'category',
      label: 'Guides',
      // highlight-start
      link: {type: 'doc', id: 'introduction'},
      // highlight-end
      items: ['pages', 'docs', 'blog', 'search'],
    },
  ],
};
```

实际效果可查看 [国际化介绍页](../../../i18n/i18n-introduction.mdx)。

#### 在文档页嵌入自动索引 {#embedding-generated-index-in-doc-page}

通过 `DocCardList` 组件，可在普通文档页中嵌入自动生成的卡片列表。该组件会显示当前文档所属父分类下的所有侧边栏项目。

```md title="docs/sidebar/index.md"
import DocCardList from '@theme/DocCardList';

<DocCardList />
```

<BrowserWindow>

import DocCardList from '@theme/DocCardList';

<DocCardList />

</BrowserWindow>

### 可折叠分类 {#collapsible-categories}

支持分类展开/折叠功能。默认情况下分类可折叠，但可通过 `collapsible: false` 禁用折叠功能。

```js title="sidebars.js"
export default {
  docs: [
    {
      type: 'category',
      label: 'Guides',
      items: [
        'creating-pages',
        {
          type: 'category',
          // highlight-next-line
          collapsible: false,
          label: 'Docs',
          items: ['introduction', 'sidebar', 'markdown-features', 'versioning'],
        },
      ],
    },
  ],
};
```

若需全局禁用分类折叠功能，可在 `plugin-content-docs` 中设置 `sidebarCollapsible` 为 `false`：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          sidebarCollapsible: false,
        },
      },
    ],
  ],
};
```

:::note

`sidebars.js` 中的配置优先级高于插件全局配置，因此当全局设置 `sidebarCollapsible: false` 时，仍可为特定分类单独启用折叠功能。

:::

### 默认展开分类 {#expanded-categories-by-default}

可折叠分类默认处于收起状态。若需初始渲染时自动展开，可设置 `collapsed` 为 `false`：

```js title="sidebars.js"
export default {
  docs: {
    Guides: [
      'creating-pages',
      {
        type: 'category',
        label: 'Docs',
        // highlight-next-line
        collapsed: false,
        items: ['markdown-features', 'sidebar', 'versioning'],
      },
    ],
  },
};
```

与 `collapsible` 类似，也可通过全局配置 `options.sidebarCollapsed` 设为 `false`。此时 `sidebars.js` 中的个体 `collapsed` 配置仍具有更高优先级。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          sidebarCollapsed: false,
        },
      },
    ],
  ],
};
```

:::warning

当分类同时存在 `collapsed: true` 和 `collapsible: false` 配置（通过 `sidebars.js` 或插件配置）时，后者优先级更高，分类仍会呈现为展开状态。

:::

## 使用简写语法 {#using-shorthands}

对于无需深度定制的常规侧边栏项目，可通过**简写语法**更简洁地表达。这包含两部分：[文档简写](#doc-shorthand) 和 [分类简写](#category-shorthand)。

### 文档简写 {#doc-shorthand}

类型为 `doc` 的项目可直接用字符串表示其ID：

<Tabs>
<TabItem value="Longhand">

```js title="sidebars.js"
export default {
  sidebar: [
    // highlight-start
    {
      type: 'doc',
      id: 'myDoc',
    },
    // highlight-end
  ],
};
```

</TabItem>
<TabItem value="Shorthand">

```js title="sidebars.js"
export default {
  sidebar: [
    // highlight-start
    'myDoc',
    // highlight-end
  ],
};
```

</TabItem>
</Tabs>

因此前例可简化为：

```js title="sidebars.js"
export default {
  mySidebar: [
    {
      type: 'category',
      label: 'Getting Started',
      items: [
        // highlight-next-line
        'doc1',
      ],
    },
    {
      type: 'category',
      label: 'Docusaurus',
      items: [
        // highlight-start
        'doc2',
        'doc3',
        // highlight-end
      ],
    },
    {
      type: 'link',
      label: 'Learn more',
      href: 'https://example.com',
    },
  ],
};
```

### 分类简写 {#category-shorthand}

分类项目可用键为标签名、值为子项数组的对象表示。

<Tabs>
<TabItem value="Longhand">

```js title="sidebars.js"
export default {
  sidebar: [
    // highlight-start
    {
      type: 'category',
      label: 'Getting started',
      items: ['doc1', 'doc2'],
    },
    // highlight-end
  ],
};
```

</TabItem>
<TabItem value="Shorthand">

```js title="sidebars.js"
export default {
  sidebar: [
    // highlight-start
    {
      'Getting started': ['doc1', 'doc2'],
    },
    // highlight-end
  ],
};
```

</TabItem>
</Tabs>

这使得前例可简化为：

```js title="sidebars.js"
export default {
  mySidebar: [
    // highlight-start
    {
      'Getting started': ['doc1'],
    },
    {
      Docusaurus: ['doc2', 'doc3'],
    },
    // highlight-end
    {
      type: 'link',
      label: 'Learn more',
      href: 'https://example.com',
    },
  ],
};
```

经过此转换后，每个简写对象将仅包含一个条目。现在请看下面进一步简化的示例：

```js title="sidebars.js"
export default {
  mySidebar: [
    // highlight-start
    {
      'Getting started': ['doc1'],
      Docusaurus: ['doc2', 'doc3'],
    },
    // highlight-end
    {
      type: 'link',
      label: 'Learn more',
      href: 'https://example.com',
    },
  ],
};
```

请注意两个连续的类别简写如何被压缩成一个包含两个条目的对象。这种语法会生成一个**侧边栏片段**：您不应将该对象视为一个整体项——该对象会被展开，其中每个条目成为独立项，并与其他项（本例中的"了解更多"链接）拼接形成最终的侧边栏层级。在讨论[自动生成侧边栏](autogenerated.mdx)时，侧边栏片段同样具有重要意义。

当您遇到被缩减为单个类别简写的条目数组时，也可以省略该封闭数组。

<Tabs>
<TabItem value="Before">

```js title="sidebars.js"
export default {
  sidebar: [
    {
      'Getting started': ['doc1'],
      Docusaurus: [
        {
          'Basic guides': ['doc2', 'doc3'],
          'Advanced guides': ['doc4', 'doc5'],
        },
      ],
    },
  ],
};
```

</TabItem>
<TabItem value="After">

```js title="sidebars.js"
export default {
  sidebar: {
    'Getting started': ['doc1'],
    Docusaurus: {
      'Basic guides': ['doc2', 'doc3'],
      'Advanced guides': ['doc4', 'doc5'],
    },
  },
};
```

</TabItem>
</Tabs>